src/clients/snapshots/cake__clients__types__tests__to_api_input_assistant_message_with_id_and_status.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "content": [
    {
      "annotations": [],
      "text": "Hi there",
      "type": "output_text"
    }
  ],
  "id": "msg-1",
  "role": "assistant",
  "status": "completed",
  "type": "message"
}
