src/clients/snapshots/cake__clients__types__tests__to_api_input_function_call.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "type": "function_call"
}
