src/clients/snapshots/cake__clients__types__tests__to_api_input_function_call_output.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "call_id": "call-1",
  "output": "file.txt\nother.txt",
  "type": "function_call_output"
}
