src/clients/snapshots/cake__clients__types__tests__to_api_input_reasoning_with_content_array.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "content": [
    {
      "text": "deep analysis",
      "type": "reasoning_text"
    }
  ],
  "id": "r-1",
  "summary": [
    {
      "text": "thinking...",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
