src/clients/snapshots/cake__clients__types__tests__to_api_input_reasoning_with_encrypted_content.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "encrypted_content": "gAAAAABencrypted...",
  "id": "r-1",
  "summary": [
    {
      "text": "thinking...",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
