src/clients/snapshots/cake__clients__types__tests__to_api_input_reasoning_with_summary.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "id": "r-1",
  "summary": [
    {
      "text": "thinking...",
      "type": "summary_text"
    }
  ],
  "type": "reasoning"
}
