src/clients/snapshots/cake__clients__types__tests__to_api_input_system_message.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "content": [
    {
      "text": "You are cake",
      "type": "input_text"
    }
  ],
  "role": "system",
  "type": "message"
}
