src/clients/snapshots/cake__clients__types__tests__to_api_input_user_message.snap
---
source: src/clients/types.rs
expression: item.to_api_input()
---
{
  "content": [
    {
      "text": "Hello",
      "type": "input_text"
    }
  ],
  "role": "user",
  "type": "message"
}
