src/clients/snapshots/cake__clients__types__tests__to_streaming_json_function_call.snap
---
source: src/clients/types.rs
expression: item.to_streaming_json()
---
{
  "arguments": "{\"cmd\":\"ls\"}",
  "call_id": "call-1",
  "id": "fc-1",
  "name": "bash",
  "type": "function_call"
}
