src/clients/snapshots/cake__clients__types__tests__to_streaming_json_function_call_output.snap
---
source: src/clients/types.rs
expression: item.to_streaming_json()
---
{
  "call_id": "call-1",
  "output": "result",
  "type": "function_call_output"
}
