src/clients/snapshots/cake__clients__types__tests__to_streaming_json_message_with_id_and_status.snap
---
source: src/clients/types.rs
expression: item.to_streaming_json()
---
{
  "content": "Response",
  "id": "msg-123",
  "role": "assistant",
  "status": "completed",
  "type": "message"
}
