src/clients/snapshots/cake__clients__types__tests__to_streaming_json_reasoning_plain_summary.snap
---
source: src/clients/types.rs
expression: item.to_streaming_json()
---
{
  "id": "r-1",
  "summary": [
    "step 1",
    "step 2"
  ],
  "type": "reasoning"
}
